--- a/posts/Linear_Algebra/선형대수학.ipynb
+++ b/posts/Linear_Algebra/선형대수학.ipynb
@@ -53,9 +53,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "$A$ -> $A^T$\n",
+    "$A$ → $A^T$\n",
     "\n",
-    "$a_{ij}$ -> $a_{ji}$"
+    "$a_{ij}$ → $a_{ji}$"
    ]
   },
   {
@@ -95,7 +95,7 @@
    "source": [
     "내적: 두 벡터가 닮은 정도를 알아내는데 사용할 수 있다.\n",
     "\n",
-    "inner product $\\supset$ dot prodect $=$ scalar product"
+    "inner product $\\supset$ dot product $=$ scalar product"
    ]
   },
   {
@@ -143,7 +143,7 @@
     "\n",
     "$\\frac{a}{\\sqrt{a^T}{a}} = \\frac{a}{\\lVert a \\rVert}$ : Normalize\n",
     "\n",
-    "$a \\cdot b$ => 같은 방향일때 가장 크고 반대 방향일 때 가장 작으며 직각일때 0"
+    "$a \\cdot b$ → 같은 방향일때 가장 크고 반대 방향일 때 가장 작으며 직각일때 0"
    ]
   },
   {
@@ -734,6 +734,107 @@
    "metadata": {},
    "source": [
     "## 가우스-조던 소거법 (Gauss-Jordan Elimination)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "https://youtu.be/Q1zCibRtI2A?si=zc1RxVBsds3qsRRH&t=128"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 2 $\\times$ 2 역행렬"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$\\begin{pmatrix}a&b\\\\c&d\\end{pmatrix}^{-1}$ = $\\frac{1}{ad-bc}\\begin{pmatrix}d&{-b}\\\\{-c}&a\\end{pmatrix}$\n",
+    "\n",
+    "그렇다면 ad-bc가 0일 경우에는?? invertible하지 않다고 한다.\n",
+    "\n",
+    "여기서 ad-bc를 determinant라고 함."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- 정사각행렬 A가 invertible하다(non singular matrix라고 함 invertible하지 않으면 singular matrix)\n",
+    "\n",
+    "    와 동치인 것들\n",
+    "\n",
+    "    1. $det(A) \\neq 0$\n",
+    "    2. A가 full rank 이다. \n",
+    "\n",
+    "        (즉, $det(A)=0$인 경우는 A가 rank-deficient)\n",
+    "\n",
+    "    3. $N(A) = \\mathbf{0}$\n",
+    "\n",
+    "        full rank이면 null space는 영벡터만 존재한다.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- 역행렬 관련 property\n",
+    "\n",
+    "    1. $(AB)^{-1} = B^{-1}A^{-1}$\n",
+    "\n",
+    "    2. $(A^{-1})^{-1} = A$\n",
+    "\n",
+    "    3. $(kA)^{-1} = \\frac{1}{k}A^{-1}$\n",
+    "\n",
+    "    4. $(A^{T})^{-1} = (A^{-1})^{T}$\n",
+    "\n",
+    "    5. $det(A^{-1}) = \\frac{1}{det(A)}$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 행렬식(determinant)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "`option`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$A=\\begin{pmatrix}a&b&c\\\\d&e&f\\\\g&h&i\\end{pmatrix}$, \n",
+    "\n",
+    "$\\det(A) = a(ei-fh)-b(di-fg)+c(dh-eg)$\n",
+    "\n",
+    "a, b, c가 + - + 인 것? → cofactor 찾아볼 것\n",
+    "\n",
+    "다음과 같이 determinant 구하는 것을 \"Laplace expansion\" or \"Cofactor expansion\" 이라고 한다.\n",
+    "\n",
+    "행렬이 조금 클 때 determinant는 위와 같이 작은 행렬의 determinant 합으로 나타내어진다."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Determinant 관련 properties\n",
+    "\n",
+    "1. $det(A)=0$ $↔$ A is singular(invertible 하지 않다.)\n",
+    "2. A가 rank-deficient $↔$ $det(A)=0$\n",
+    "    (하나라도 dependent한 열벡터가 있다면 즉, 다른 열벡터들의 조합으로 나타낼 수 있는 열벡터가 있다면 rank-deficient인 것 이고 그때는 $det(A)=0$이다.)\n",
+    "3. $\\begin{pmatrix}a_{11}&&...&\\\\&a_{22}&&\\\\...&&...&\\\\&&&a_{nn}\\end{pmatrix}$대각행렬에서, $det(A)=a_{11}a_{22}...a_{nn}$ (하나의 원소라도 0이 있으면 역행렬이 존재하지 않음. $det(A) \\neq 0$가 되기에)"
    ]
   },
   {
