--- a/index.qmd
+++ b/index.qmd
@@ -4,16 +4,16 @@ listing:
   contents: posts
   sort: 
     - "date desc"
-    - "title desc"
+    # - "title desc"
   type: table
   categories: true
-  feed:
-    items: 7
-    categories: []
+  #feed:
+  #  items: 7
+  #  categories: []
   sort-ui: true
   filter-ui: true
 page-layout: full
-title-block-banner: true
+title-block-banner: false
 ---
 
 통계학, 머신러닝, 딥러닝 등 공부내용을 기록하는 블로그입니다.
